--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <h1>NEGRLAR ROYHATI</h1>
   <div id="cardContainer"></div>
 </body>
-<script src="script.js"></script>
+<script src="./script.js"></script>
 
 </html>
